manifests/apps/ocis/ratelimit.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: ocis
spec:
  rateLimit:
    average: 5
    period: 1m
