manifests/apps/ocis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocis
  namespace: ocis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocis
  template:
    metadata:
      labels:
        app: ocis
    spec:
      containers:
        - name: ocis
          image: owncloud/ocis:latest
          command: ["sh", "-c", "ocis init || true; exec ocis server"]
          volumeMounts:
            - name: ocis-data
              mountPath: /var/lib/ocis
            - name: ocis-config
              mountPath: /etc/ocis
      volumes:
        - name: ocis-data
          persistentVolumeClaim:
            claimName: ocis-data
        - name: ocis-config
          persistentVolumeClaim:
            claimName: ocis-config
      restartPolicy: Always
