manifests/apps/ocis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocis
  namespace: ocis
spec:
  selector:
    app: ocis
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
