manifests/apps/ocis/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ocis
  namespace: ocis
spec:
  parentRefs:
    - name: main-gateway
      sectionName: websecure
  
  hostnames:
    - "cloud.krea.to"

  rules:
    - backendRefs:
        - name: ocis
          port: 9200
          kind: Service
          namespace: ocis
